--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- CSRF Token -->
     <meta name="csrf-token" content="X3IC9dzzafkxoyLbskacqQ4wUzp1h5LICQwUpNnc">
 
-    <title>Accueil • Azuriom</title>
+    <title>Accueil • QuestRP</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="storage/img/baniere.png">
