--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         </button>
     </div>
     <div class="sidebar-end">
-                <a href="https://xbox-api.azuriom.com/auth/redirect?redirect_uri=https%3A%2F%2Feternicraft.com%2Fuser%2Flogin%2Fcallback&amp;scope=XboxLive.signin&amp;response_type=code&amp;state=Oj3gJUepeSRiwN63A7kOgoke370AfmFxGNMzvNFP&amp;prompt=select_account" class="sidebar-btn sidebar-link">
+                <a href="/login\index.html" class="sidebar-btn sidebar-link">
             <i class="icon bi bi-person-fill"></i>
             <span class="text">Connexion</span>
         </a>
@@ -159,7 +159,7 @@
             <span class="icon py-4">
                 <img src="storage/img/logo.png" alt="">
             </span>
-            <span class="text">Azuriom</span>
+            <span class="text">QuestRP</span>
         </a>
                                 <a href="index.html" class="sidebar-link  active " >
                                 <i class="icon bi bi-house"></i>
@@ -620,11 +620,11 @@
             <div>
                 <h6 class="fw-bold h3">Liens utiles</h6>
                 <div class="mb-3 mb-sm-0">
-                                                            <a href="https://discord.gg/W6ePpxvev5" class="bigfooter-link d-block">
+                                                            <a href="#" class="bigfooter-link d-block">
                         <i class="bi bi-link-45deg me-1"></i>
                         discord
                     </a>
-                                                                                <a href="https://myticliferp.cosmocloud.me/" class="bigfooter-link d-block">
+                                                                                <a href="#" class="bigfooter-link d-block">
                         <i class="bi bi-link-45deg me-1"></i>
                         forum
                     </a>
@@ -640,11 +640,8 @@
 <footer id="footer" class="card">
         <div class="card-body d-md-flex justify-content-between px-5" style="border-radius: 0 !important;">
         <div>
-            Copyright © 2024 EterniCraft - Tous droits réservés.
+            Copyright © 2024 QuestRP - Tous droits réservés.
         </div>
-        <div>
-            Propulsé par <a href="https://azuriom.com/" target="_blank" rel="noopener noreferrer">Azuriom</a>.                        <a href="https://market.azuriom.com/resources/89" data-sloyni-copyright class="sloyni-copyright"  target="_blank">Thème réalisé par Sloyni.</a>
-                    </div>
     </div>
 </footer>
         </main>
