--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         </button>
     </div>
     <div class="sidebar-end">
-                <a href="/login\index.html" class="sidebar-btn sidebar-link">
+                <a href="/login\" class="sidebar-btn sidebar-link">
             <i class="icon bi bi-person-fill"></i>
             <span class="text">Connexion</span>
         </a>
@@ -182,7 +182,7 @@
                      Boutique
                 </span>
             </a>
-                                            <a href="https://xbox-api.azuriom.com/auth/redirect?redirect_uri=https%3A%2F%2Feternicraft.com%2Fuser%2Flogin%2Fcallback&amp;scope=XboxLive.signin&amp;response_type=code&amp;state=SOUozyuKUlxhfdoZfo0grQaVu5uXspvJrqmsDfMI&amp;prompt=select_account" class="sidebar-link " >
+                                            <a href="/login/" class="sidebar-link " >
                                 <i class="icon bi bi-chat"></i>
                 
                 <span class="text">
@@ -203,7 +203,7 @@
                      Staff
                 </span>
             </a>
-                                        <a href="https://xbox-api.azuriom.com/auth/redirect?redirect_uri=https%3A%2F%2Feternicraft.com%2Fuser%2Flogin%2Fcallback&amp;scope=XboxLive.signin&amp;response_type=code&amp;state=Mlw21AykGIiIo60pqbVJdYq3bhpNzsmao7FxSOlb&amp;prompt=select_account" class="sidebar-btn mt-3 sidebar-link">
+                                        <a href="/login" class="sidebar-btn mt-3 sidebar-link">
                 <i class="icon bi bi-person-fill"></i>
                 <span class="text">Connexion</span>
             </a>
