--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                                 <i class="icon bi bi-basket"></i>
                                 <span class="text"> Boutique</span>
             </a>
-                                            <a href="https://xbox-api.azuriom.com/auth/redirect?redirect_uri=https%3A%2F%2Feternicraft.com%2Fuser%2Flogin%2Fcallback&amp;scope=XboxLive.signin&amp;response_type=code&amp;state=s2DvQAyiweXY4W4QlbQYEpqUNwPINAC0bTtZbXGy&amp;prompt=select_account" class="sidebar-link opacity-0 " >
+                                            <a href="/login" class="sidebar-link opacity-0 " >
 
                                 <i class="icon bi bi-chat"></i>
                                 <span class="text"> Support</span>
@@ -227,7 +227,7 @@
         </h6>
     </div>
     <div class="d-flex align-items-center pe-3">
-                <a href="https://xbox-api.azuriom.com/auth/redirect?redirect_uri=https%3A%2F%2Feternicraft.com%2Fuser%2Flogin%2Fcallback&amp;scope=XboxLive.signin&amp;response_type=code&amp;state=2G30NEk0q79mBYBURx6xIHDYzwQfYAMuZIrSPkB4&amp;prompt=select_account" class="btn btn-sm btn-gradient-2">
+                <a href="/login" class="btn btn-sm btn-gradient-2">
             <i class="icon bi bi-person-fill"></i>
             <span class="text">Connexion</span>
         </a>
