--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 
-<!-- Mirrored from eternicraft.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 26 Jan 2025 17:54:20 GMT -->
+<!-- Mirrored from QuestRP.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 26 Jan 2025 17:54:20 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
     <meta charset="utf-8">
@@ -255,7 +255,7 @@
             </div>
 
             <div>
-                                                        <a href="https://xbox-api.azuriom.com/auth/redirect?redirect_uri=https%3A%2F%2Feternicraft.com%2Fuser%2Flogin%2Fcallback&amp;scope=XboxLive.signin&amp;response_type=code&amp;state=rcwu5LIV4Xid0nTmMXAs6WfAhCf3EgSM1lfMk08p&amp;prompt=select_account"                                                class="btn btn-outline-gradient ms-5">
+                                                        <a href="/login"                                                class="btn btn-outline-gradient ms-5">
                                                                         Support                        <i class="bi bi-headset"></i>
                     </a>
                                     
@@ -275,7 +275,7 @@
                                         <div class="d-flex align-items-center mb-2">
                         <h1
                                                         class="title-mini mb-0">
-                                EterniCraft
+                                QuestRP
                         </h1>
                     </div>
                                                             <h1
@@ -368,13 +368,13 @@
                             </div>
                             <div class="content">
                                 <h5 class="title mt-2">
-                                    🎬 Le Trailer Officiel d’EterniCraft est enfin là ! 🎬
+                                    🎬 Le Trailer Officiel d’QuestRP est enfin là ! 🎬
                                 </h5>
                                 <p class="description mb-1">
-                                    ⚠️ Cette vidéo est temporaire, une version améliorée sera bientôt disponible. Restez connectés pour découvrir le meilleur d&#039;EterniCraft !
+                                    ⚠️ Cette vidéo est temporaire, une version améliorée sera bientôt disponible. Restez connectés pour découvrir le meilleur d&#039;QuestRP !
                                 </p>
                                 <div class="action">
-                                    <a class="btn btn-gradient btn-hover-icon btn-sm mt-2 mb-2" href="news/eternicraftnewtrailervideobeta.html">
+                                    <a class="btn btn-gradient btn-hover-icon btn-sm mt-2 mb-2" href="news/QuestRPnewtrailervideobeta.html">
                                         Consulter                                        <i class="bi bi-arrow-right"></i>
                                     </a>
                                 </div>
@@ -483,7 +483,7 @@
         <div class="col-12">
                             <div class="row">
                     <div class="col-md mb-3 mb-lg-0">
-                        <a href="https://xbox-api.azuriom.com/auth/redirect?redirect_uri=https%3A%2F%2Feternicraft.com%2Fuser%2Flogin%2Fcallback&amp;scope=XboxLive.signin&amp;response_type=code&amp;state=ktEwzJHpkSRXveSTCCyp9tFahyfYqIf4M0Woarjv&amp;prompt=select_account" class="btn d-flex justify-content-center w-100 btn-gradient">
+                        <a href="https://xbox-api.azuriom.com/auth/redirect?redirect_uri=https%3A%2F%2FQuestRP.com%2Fuser%2Flogin%2Fcallback&amp;scope=XboxLive.signin&amp;response_type=code&amp;state=ktEwzJHpkSRXveSTCCyp9tFahyfYqIf4M0Woarjv&amp;prompt=select_account" class="btn d-flex justify-content-center w-100 btn-gradient">
                             <i class="bi bi-person-fill me-2"></i>
                             Connexion
                         </a>
@@ -564,7 +564,7 @@
     
 </body>
 
-<!-- Mirrored from eternicraft.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 26 Jan 2025 17:54:33 GMT -->
+<!-- Mirrored from QuestRP.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 26 Jan 2025 17:54:33 GMT -->
 </html>
         </div>
 
@@ -609,8 +609,8 @@
     <div class="row">
         <div class="col-md-5 d-md-flex align-items-center px-5">
             <div class="py-4">
-                <h6 class="fw-bold h3 pt-3 pt-md-0">EterniCraft</h6>
-                <p class="text-muted"><p>Rejoins **EterniCraft**, un serveur Minecraft RP Fantasy immersif ! Plonge dans un univers riche où magie, aventures épiques et royaumes t'attendent. Profite d'un PVP actif le week-end, de vendredi 00h01 à dimanche 23h59, ainsi que le mercredi de 00h01 à 23h59 pour des batailles surprises. Construis ta base, défends ton territoire et participe à des quêtes palpitantes. Écris ton propre chapitre dans cette aventure épique !</p><p><br></p></p>
+                <h6 class="fw-bold h3 pt-3 pt-md-0">QuestRP</h6>
+                <p class="text-muted"><p>Rejoins **QuestRP**, un serveur Minecraft RP Fantasy immersif ! Plonge dans un univers riche où magie, aventures épiques et royaumes t'attendent. Profite d'un PVP actif le week-end, de vendredi 00h01 à dimanche 23h59, ainsi que le mercredi de 00h01 à 23h59 pour des batailles surprises. Construis ta base, défends ton territoire et participe à des quêtes palpitantes. Écris ton propre chapitre dans cette aventure épique !</p><p><br></p></p>
             </div>
         </div>
         <div class="col-md-2 d-md-flex d-none justify-content-center">
